--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,13 +11,14 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./index.scss" />
     <style>
       * {
         font-family: "Open Sans", sans-serif;
         margin: 0;
       }
     </style>
-    <title>React App</title>
+    <title>Travel Sathi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
